--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = foodblocks
 depends = farming
-optional_depends = 
+optional_depends = ethereal
 description = Solid cubes of food for mass storage or building.
