--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,3 @@
 name = foodblocks
-depends = default, farming
-optional_depends = ethereal
+optional_depends = default, farming, mcl_farming, ethereal
 description = Solid cubes of food for mass storage or building.
